--- a/prod/index.html
+++ b/prod/index.html
@@ -8,6 +8,11 @@
 		<!-- js --> 
 		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 		<script src="game.js" type="text/javascript"></script>
+    <!-- iOS -->
+    
+			<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" />
+			<meta name="apple-mobile-web-app-capable" content="yes" /> 
+			<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	</head>
 	<body>
 	
