BASIC WALKING - 2D version

--- a/prod/index.html
+++ b/prod/index.html
@@ -18,7 +18,9 @@
 	
 		  <div id="dev-data"></div>
 		  
-		  <div id="charachter"></div>
+		  <div id="map">
+		    <div id="charachter"></div>
+		  </div>
 	
 	</body>
 </html>
