--- a/prod/index.html
+++ b/prod/index.html
@@ -20,7 +20,7 @@
 		  </div>
 		  
 		  <div class="mask">
-		    <div class="camera">
+		    <div class="camera" id="cam">
   		    <div class="map" id="map">
   		    
   		      <ul id="box_1" class="platform">
